[gd_scene load_steps=3 format=3 uid="uid://craftpopup"]

[ext_resource type="Script" path="res://scripts/ui/EquipmentCraftPopup.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.6, 0.2, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="EquipmentCraftPopup" type="PopupPanel"]
title = "è£…å¤‡åˆæˆ"
initial_position = 2
size = Vector2i(600, 700)
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
offset_right = 600.0
offset_bottom = 700.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "ğŸ”¨ è£…å¤‡åˆæˆ"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HeroSelection" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/VBoxContainer/HeroSelection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "é€‰æ‹©è‹±é›„:"

[node name="HeroList" type="ItemList" parent="Panel/VBoxContainer/HeroSelection"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 16
max_columns = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MaterialSelection" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer/MaterialSelection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "é€‰æ‹©ææ–™è£…å¤‡ (éœ€è¦2ä¸ª):"

[node name="MaterialSlot1" type="Button" parent="Panel/VBoxContainer/MaterialSelection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "é€‰æ‹©è£…å¤‡"

[node name="PlusLabel" type="Label" parent="Panel/VBoxContainer/MaterialSelection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "+"
horizontal_alignment = 1

[node name="MaterialSlot2" type="Button" parent="Panel/VBoxContainer/MaterialSelection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "é€‰æ‹©è£…å¤‡"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RecipePreview" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Panel/VBoxContainer/RecipePreview"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "åˆæˆé¢„è§ˆ:"

[node name="PreviewLabel" type="Label" parent="Panel/VBoxContainer/RecipePreview"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 1, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "è¯·é€‰æ‹©2ä¸ªè£…å¤‡ææ–™"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator4" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CostInfo" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CurrentGoldLabel" type="Label" parent="Panel/VBoxContainer/CostInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "å½“å‰é‡‘å¸: ğŸ’°0"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel/VBoxContainer/CostInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "åˆæˆè´¹ç”¨: --"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CraftButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ğŸ”¨ åˆæˆ"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "å–æ¶ˆ"
