class_name EquipmentCraftPopup
extends PopupPanel

## ğŸ”¨ è£…å¤‡åˆæˆå¼¹çª—
## å…è®¸ç©å®¶é€‰æ‹©è‹±é›„å’Œè£…å¤‡ææ–™è¿›è¡Œåˆæˆ

signal craft_confirmed(hero_id: String, material_ids: Array)

# UIç»„ä»¶å¼•ç”¨
@onready var hero_list: ItemList = $Panel/VBoxContainer/HeroSelection/HeroList
@onready var material_slot_1: Button = $Panel/VBoxContainer/MaterialSelection/MaterialSlot1
@onready var material_slot_2: Button = $Panel/VBoxContainer/MaterialSelection/MaterialSlot2
@onready var recipe_preview: Label = $Panel/VBoxContainer/RecipePreview/PreviewLabel
@onready var gold_cost_label: Label = $Panel/VBoxContainer/CostInfo/GoldLabel
@onready var current_gold_label: Label = $Panel/VBoxContainer/CostInfo/CurrentGoldLabel
@onready var craft_button: Button = $Panel/VBoxContainer/ButtonContainer/CraftButton
@onready var cancel_button: Button = $Panel/VBoxContainer/ButtonContainer/CancelButton

# æ•°æ®
var player_cards: Array = []  # ç©å®¶çš„è‹±é›„åˆ—è¡¨
var selected_hero: Card = null
var selected_materials: Array = []  # é€‰ä¸­çš„ææ–™è£…å¤‡
var current_gold: int = 0

# åˆæˆé…æ–¹æ•°æ®ï¼ˆä»æœåŠ¡å™¨è·å–æˆ–ç¡¬ç¼–ç ï¼‰
var recipes: Dictionary = {
	# æ ¼å¼ï¼šææ–™1_ææ–™2 -> åˆæˆç»“æœ
	"basic_001_basic_001": {
		"name": "é£æš´å·¨å‰‘",
		"description": "æ”»å‡»åŠ›+50",
		"cost": 10
	},
	"basic_002_basic_004": {
		"name": "ç©¿äº‘å¼“",
		"description": "æš´å‡»ç‡+15%, å¢ä¼¤+5%",
		"cost": 10
	},
	"basic_001_basic_004": {
		"name": "é€Ÿå‡»ä¹‹æª",
		"description": "æ”»å‡»åŠ›+25, å¢ä¼¤+7%",
		"cost": 10
	},
	"basic_002_basic_003": {
		"name": "ç‹‚æš´åŒåˆƒ",
		"description": "æš´å‡»ç‡+13%, æš´å‡»æ•ˆæœ+10%",
		"cost": 10
	},
	"basic_005_basic_001": {
		"name": "æ—¥å†•",
		"description": "æ”»å‡»åŠ›+25, ç”Ÿå‘½+250",
		"cost": 10
	},
	"basic_005_basic_005": {
		"name": "åŠ›é‡è…°å¸¦",
		"description": "æœ€å¤§ç”Ÿå‘½å€¼+500",
		"cost": 10
	},
	"basic_001_basic_006": {
		"name": "è†æ£˜æŠ¤æ‰‹",
		"description": "æ”»å‡»åŠ›+25, æŠ¤ç”²+40",
		"cost": 10
	},
	"basic_005_basic_006": {
		"name": "å®ˆæŠ¤è€…ä¹‹é“ ",
		"description": "ç”Ÿå‘½+300, æŠ¤ç”²+40",
		"cost": 10
	},
	"basic_007_basic_005": {
		"name": "ç†”ç‚¼ä¹‹å¿ƒ",
		"description": "æ¯å›åˆ+50HP, ç”Ÿå‘½+400",
		"cost": 10
	}
}

func _ready():
	# è¿æ¥æŒ‰é’®ä¿¡å·
	if craft_button:
		craft_button.pressed.connect(_on_craft_pressed)
	if cancel_button:
		cancel_button.pressed.connect(_on_cancel_pressed)
	if hero_list:
		hero_list.item_selected.connect(_on_hero_selected)
	if material_slot_1:
		material_slot_1.pressed.connect(func(): _on_material_slot_pressed(0))
	if material_slot_2:
		material_slot_2.pressed.connect(func(): _on_material_slot_pressed(1))
	
	_update_craft_button_state()

## æ˜¾ç¤ºå¼¹çª—
func show_popup(cards: Array, gold: int):
	player_cards = cards
	current_gold = gold
	selected_hero = null
	selected_materials = []
	
	_refresh_hero_list()
	_clear_material_slots()
	_update_gold_display()
	_update_craft_button_state()
	
	popup_centered()

## åˆ·æ–°è‹±é›„åˆ—è¡¨
func _refresh_hero_list():
	if not hero_list:
		return
	
	hero_list.clear()
	for card in player_cards:
		if card and card.health > 0:
			var equipment_count = 0
			if card.equipment:
				equipment_count = card.equipment.size()
			var text = "%s (è£…å¤‡: %d/2)" % [card.card_name, equipment_count]
			hero_list.add_item(text)

## è‹±é›„é€‰æ‹©äº‹ä»¶
func _on_hero_selected(index: int):
	if index < 0 or index >= player_cards.size():
		return
	
	selected_hero = player_cards[index]
	selected_materials = []
	_clear_material_slots()
	_update_recipe_preview()
	_update_craft_button_state()
	
	print("é€‰ä¸­è‹±é›„: %s" % selected_hero.card_name)

## ææ–™æ§½ç‚¹å‡»äº‹ä»¶
func _on_material_slot_pressed(slot_index: int):
	if not selected_hero:
		_show_error("è¯·å…ˆé€‰æ‹©è‹±é›„ï¼")
		return
	
	if not selected_hero.equipment or selected_hero.equipment.size() == 0:
		_show_error("è¯¥è‹±é›„æ²¡æœ‰è£…å¤‡ï¼")
		return
	
	# æ˜¾ç¤ºè£…å¤‡é€‰æ‹©èœå•
	_show_equipment_selection_menu(slot_index)

## æ˜¾ç¤ºè£…å¤‡é€‰æ‹©èœå•
func _show_equipment_selection_menu(slot_index: int):
	var popup = PopupMenu.new()
	add_child(popup)
	
	# æ·»åŠ è£…å¤‡é€‰é¡¹
	var available_equipments = []
	for equip in selected_hero.equipment:
		# è·³è¿‡å·²é€‰æ‹©çš„è£…å¤‡
		var is_selected = false
		for selected in selected_materials:
			if selected and selected.get("id") == equip.get("id"):
				is_selected = true
				break
		
		if not is_selected:
			available_equipments.append(equip)
			var equip_name = equip.get("name", "æœªçŸ¥è£…å¤‡")
			popup.add_item(equip_name)
	
	if available_equipments.is_empty():
		_show_error("æ²¡æœ‰å¯ç”¨çš„è£…å¤‡ææ–™ï¼")
		popup.queue_free()
		return
	
	# è¿æ¥é€‰æ‹©ä¿¡å·
	popup.index_pressed.connect(func(idx):
		if idx >= 0 and idx < available_equipments.size():
			_select_material(slot_index, available_equipments[idx])
		popup.queue_free()
	)
	
	# æ˜¾ç¤ºåœ¨ææ–™æ§½æŒ‰é’®æ—è¾¹
	var slot_button = material_slot_1 if slot_index == 0 else material_slot_2
	var button_pos = slot_button.global_position
	popup.position = Vector2i(button_pos.x, button_pos.y + slot_button.size.y)
	popup.popup()

## é€‰æ‹©ææ–™
func _select_material(slot_index: int, equipment: Dictionary):
	# ç¡®ä¿æ•°ç»„æœ‰è¶³å¤Ÿçš„ç©ºé—´
	while selected_materials.size() <= slot_index:
		selected_materials.append(null)
	
	selected_materials[slot_index] = equipment
	
	# æ›´æ–°UI
	var slot_button = material_slot_1 if slot_index == 0 else material_slot_2
	slot_button.text = equipment.get("name", "æœªçŸ¥")
	
	print("é€‰æ‹©ææ–™ %d: %s" % [slot_index + 1, equipment.get("name", "æœªçŸ¥")])
	
	_update_recipe_preview()
	_update_craft_button_state()

## æ¸…ç©ºææ–™æ§½
func _clear_material_slots():
	if material_slot_1:
		material_slot_1.text = "é€‰æ‹©è£…å¤‡"
	if material_slot_2:
		material_slot_2.text = "é€‰æ‹©è£…å¤‡"
	selected_materials = []

## æ›´æ–°é…æ–¹é¢„è§ˆ
func _update_recipe_preview():
	if not recipe_preview:
		return
	
	# æ£€æŸ¥æ˜¯å¦é€‰æ‹©äº†2ä¸ªææ–™
	if selected_materials.size() != 2 or not selected_materials[0] or not selected_materials[1]:
		recipe_preview.text = "è¯·é€‰æ‹©2ä¸ªè£…å¤‡ææ–™"
		if gold_cost_label:
			gold_cost_label.text = "åˆæˆè´¹ç”¨: --"
		return
	
	# è·å–ææ–™ID
	var mat1_id = selected_materials[0].get("id", "")
	var mat2_id = selected_materials[1].get("id", "")
	
	# æŸ¥æ‰¾é…æ–¹ï¼ˆé¡ºåºæ— å…³ï¼‰
	var recipe_key_1 = "%s_%s" % [mat1_id, mat2_id]
	var recipe_key_2 = "%s_%s" % [mat2_id, mat1_id]
	
	var recipe = null
	if recipes.has(recipe_key_1):
		recipe = recipes[recipe_key_1]
	elif recipes.has(recipe_key_2):
		recipe = recipes[recipe_key_2]
	
	if recipe:
		recipe_preview.text = "âœ¨ %s\n%s" % [recipe.name, recipe.description]
		if gold_cost_label:
			gold_cost_label.text = "åˆæˆè´¹ç”¨: ğŸ’°%d" % recipe.cost
	else:
		recipe_preview.text = "âŒ è¿™ä¸¤ä¸ªè£…å¤‡æ— æ³•åˆæˆ"
		if gold_cost_label:
			gold_cost_label.text = "åˆæˆè´¹ç”¨: --"

## æ›´æ–°é‡‘å¸æ˜¾ç¤º
func _update_gold_display():
	if current_gold_label:
		current_gold_label.text = "å½“å‰é‡‘å¸: ğŸ’°%d" % current_gold

## æ›´æ–°åˆæˆæŒ‰é’®çŠ¶æ€
func _update_craft_button_state():
	if not craft_button:
		return
	
	var can_craft = false
	
	# æ£€æŸ¥æ¡ä»¶
	if selected_hero and selected_materials.size() == 2 and selected_materials[0] and selected_materials[1]:
		# æ£€æŸ¥é…æ–¹æ˜¯å¦å­˜åœ¨
		var mat1_id = selected_materials[0].get("id", "")
		var mat2_id = selected_materials[1].get("id", "")
		var recipe_key_1 = "%s_%s" % [mat1_id, mat2_id]
		var recipe_key_2 = "%s_%s" % [mat2_id, mat1_id]
		
		if recipes.has(recipe_key_1) or recipes.has(recipe_key_2):
			# æ£€æŸ¥é‡‘å¸æ˜¯å¦è¶³å¤Ÿ
			var cost = 10  # é»˜è®¤è´¹ç”¨
			if recipes.has(recipe_key_1):
				cost = recipes[recipe_key_1].cost
			elif recipes.has(recipe_key_2):
				cost = recipes[recipe_key_2].cost
			
			if current_gold >= cost:
				can_craft = true
	
	craft_button.disabled = not can_craft

## åˆæˆæŒ‰é’®ç‚¹å‡»
func _on_craft_pressed():
	if not selected_hero or selected_materials.size() != 2:
		return
	
	# è·å–ææ–™ID
	var material_ids = [
		selected_materials[0].get("id", ""),
		selected_materials[1].get("id", "")
	]
	
	print("ğŸ”¨ å‘èµ·åˆæˆè¯·æ±‚: è‹±é›„ %s, ææ–™ %s" % [selected_hero.id, material_ids])
	
	# å‘å°„ä¿¡å·
	craft_confirmed.emit(selected_hero.id, material_ids)
	
	# å…³é—­å¼¹çª—
	hide()

## å–æ¶ˆæŒ‰é’®ç‚¹å‡»
func _on_cancel_pressed():
	hide()

## æ˜¾ç¤ºé”™è¯¯æç¤º
func _show_error(message: String):
	print("âŒ %s" % message)
	# TODO: æ˜¾ç¤ºé”™è¯¯å¼¹çª—
